err/sopaper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sopaper'...
Compiling './lib/python3.5/site-packages/sopaper/authorfetch.py'...
***   File "./lib/python3.5/site-packages/sopaper/authorfetch.py", line 23
    print "Mail Sent to {0}".format(email)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sopaper/contentsearch.py'...
***   File "./lib/python3.5/site-packages/sopaper/contentsearch.py", line 100
    print "Rebuilding..."
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sopaper/dbsearch.py'...
***   File "./lib/python3.5/site-packages/sopaper/dbsearch.py", line 44
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sopaper/fetcher'...
Compiling './lib/python3.5/site-packages/sopaper/fetcher/sciencedirect.py'...
***   File "./lib/python3.5/site-packages/sopaper/fetcher/sciencedirect.py", line 36
    print url
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sopaper/lib'...
Compiling './lib/python3.5/site-packages/sopaper/lib/downloader.py'...
***   File "./lib/python3.5/site-packages/sopaper/lib/downloader.py", line 112
    print data
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sopaper/lib/mailutil.py'...
***   File "./lib/python3.5/site-packages/sopaper/lib/mailutil.py", line 31
    print resp.content
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sopaper/lib/pdf2html.py'...
***   File "./lib/python3.5/site-packages/sopaper/lib/pdf2html.py", line 53
    print len(w.get(1))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sopaper/lib/textutil.py'...
***   File "./lib/python3.5/site-packages/sopaper/lib/textutil.py", line 104
    print title_correct("Gated Softmax Classification",
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sopaper/lib/ukutil.py'...
***   File "./lib/python3.5/site-packages/sopaper/lib/ukutil.py", line 76
    print check_filetype(open("./ukconfig.py").read(), 'PDF')
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sopaper/pdfprocess.py'...
***   File "./lib/python3.5/site-packages/sopaper/pdfprocess.py", line 88
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sopaper/searcher'...
Compiling './lib/python3.5/site-packages/sopaper/test-fetcher.py'...
***   File "./lib/python3.5/site-packages/sopaper/test-fetcher.py", line 47
    print ctx.title
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sopaper/test-searcher.py'...
***   File "./lib/python3.5/site-packages/sopaper/test-searcher.py", line 18
    print [k.name for k in searchers]
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sopaper/uklogger.py'...
***   File "./lib/python3.5/site-packages/sopaper/uklogger.py", line 19
    print colored('API', 'green'), msg
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sopaper/xpengine'...
Compiling './lib/python3.5/site-packages/sopaper/xpengine/indexer.py'...
***   File "./lib/python3.5/site-packages/sopaper/xpengine/indexer.py", line 56
    print str(e)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sopaper/xpengine/run-xp.py'...
***   File "./lib/python3.5/site-packages/sopaper/xpengine/run-xp.py", line 33
    print json.dumps(ret)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sopaper-0.8.egg-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
